k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: email-builder-demo
  namespace: nurds-email-builder-demo
spec:
  selector:
    app.kubernetes.io/name: email-builder-demo
  ports:
    - name: http
      port: 80
      targetPort: http
