k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: email-builder-demo
  namespace: nurds-email-builder-demo
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik
  rules:
    - host: email-builder.nurds.dev
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: email-builder-demo
                port:
                  number: 80
